@startuml
skinparam monochrome true
skinparam ClassAttributeIconSize 0
class WebBrowserModule {
}
interface IModule {
    + Identifier : Guid
    + IsActive : bool <<get>> <<set>>
    + Initialize() : void
}
IModule <|-- ICollectingModule
ICollectingModule <|-- WebBrowserModule
WebBrowserModule --> "ButtonClickEventProducer" ButtonClickEventProducer
WebBrowserModule =-> "CloseTabEventProducer" CloseTabEventProducer
WebBrowserModule ---> "FileDownloadEventProducer" FileDownloadEventProducer
WebBrowserModule ---> "HoverEventProducer" HoverEventProducer
WebBrowserModule --> "NavigationEventProducer" NavigationEventProducer
WebBrowserModule ---> "OpenTabEventProducer" OpenTabEventProducer
WebBrowserModule ---> "SwitchTabEventProducer" SwitchTabEventProducer
WebBrowserModule --> "TextInputEventProducer" TextInputEventProducer
WebBrowserModule ---> "  TextSelectionEventProducer" TextSelectionEventProducer
@enduml
